--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="container">
         <h2>Convert the currency here!</h2>
         <form>
-            <div class="Amount">
+            <div class="amount">
                 <p>Enter Amount</p>
                 <input value = "100" type = "text" />
             </div>
             <div class="dropdown">
-                <div class="From">
+                <div class="from">
                     <p> From </p>
                     <div class ="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png">
@@ -37,7 +37,7 @@
                 <p> To </p>
                     <div class ="to-container">
                         <img src="https://flagsapi.com/IN/flat/64.png">
-                        <select name = "to">
+                        <select name = "to-container">
                     <option value = "USD"> USD</option>
                     <option value = "INR"> INR</option>
                     <option value = "EUR"> EUR</option>
@@ -53,4 +53,5 @@
     <script src="code.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
